--- a/doc-review-buddy-ui/index.html
+++ b/doc-review-buddy-ui/index.html
@@ -3,26 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
+
+    <!-- App identity -->
     <title>Doc Review Buddy</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta
+      name="description"
+      content="AI-powered document review and compliance risk analysis"
+    />
 
-    <!-- TODO: Update og:title to match your application name -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Open Graph -->
     <meta property="og:title" content="Doc Review Buddy" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta
+      property="og:description"
+      content="Upload contracts and analyze compliance risks with AI-powered document review."
+    />
     <meta property="og:type" content="website" />
-    <meta
-      property="og:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta
-      name="twitter:image"
-      content="https://lovable.dev/opengraph-image-p98pqg.png"
-    />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary" />
   </head>
 
   <body>
